# runlatch

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: build.yml
runlatch/: Cargo.toml  README.md
runlatch-core/: Cargo.toml  README.md
runlatch-core/src/: desktop_file.rs  lib.rs  model.rs  provider.rs  registry.rs
runlatch-core/src/providers/: mod.rs  systemd.rs  xdg.rs
runlatch/src/: cli.rs  completions.rs  main.rs  output.rs
runlatch/tests/: completions.rs
