[workspace]
resolver = "2"
members = ["runlatch-core", "runlatch"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Yury Kurlykov <sh1ftr@protonmail.ch>"]
repository = "https://github.com/sh1ftr/runlatch"
description = "A modular Linux autostart manager unifying systemd, XDG, and DE-specific autostart behind a trait-based provider system."

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
