[package]
name = "runlatch"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for runlatch, a modular Linux autostart manager."
readme = "README.md"
keywords = ["autostart", "systemd", "xdg", "linux", "cli"]
categories = ["command-line-utilities", "os::unix-apis"]

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[[bin]]
name = "runlatch"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
anyhow.workspace = true
runlatch-core = { path = "../runlatch-core", version = "0.2.0" }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
